--- a/data/cards/02964201.yaml
+++ b/data/cards/02964201.yaml
@@ -53,7 +53,7 @@ sets:
     set_name: Spell Ruler (25th Anniversary Edition)
     rarities:
     - Common
-  - set_number: SATS-EN005
+  - set_number: STAS-EN005
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -86,7 +86,7 @@ sets:
     set_name: Spell Ruler (25th Anniversary Edition)
     rarities:
     - Common
-  - set_number: SATS-DE005
+  - set_number: STAS-DE005
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -103,7 +103,7 @@ sets:
     set_name: Spell Ruler (25th Anniversary Edition)
     rarities:
     - Common
-  - set_number: SATS-FR005
+  - set_number: STAS-FR005
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -120,7 +120,7 @@ sets:
     set_name: Spell Ruler (25th Anniversary Edition)
     rarities:
     - Common
-  - set_number: SATS-IT005
+  - set_number: STAS-IT005
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -133,7 +133,7 @@ sets:
     set_name: Spell Ruler (25th Anniversary Edition)
     rarities:
     - Common
-  - set_number: SATS-PT005
+  - set_number: STAS-PT005
     set_name: 2-Player Starter Set
     rarities:
     - Common
