--- a/data/cards/04929256.yaml
+++ b/data/cards/04929256.yaml
@@ -86,7 +86,7 @@ sets:
     set_name: Emperor of Darkness Structure Deck
     rarities:
     - Common
-  - set_number: SATS-EN029
+  - set_number: STAS-EN029
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -130,7 +130,7 @@ sets:
     set_name: Emperor of Darkness Structure Deck
     rarities:
     - Common
-  - set_number: SATS-DE029
+  - set_number: STAS-DE029
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -174,7 +174,7 @@ sets:
     set_name: Emperor of Darkness Structure Deck
     rarities:
     - Common
-  - set_number: SATS-FR029
+  - set_number: STAS-FR029
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -218,7 +218,7 @@ sets:
     set_name: Emperor of Darkness Structure Deck
     rarities:
     - Common
-  - set_number: SATS-IT029
+  - set_number: STAS-IT029
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -241,7 +241,7 @@ sets:
     set_name: Emperor of Darkness Structure Deck
     rarities:
     - Common
-  - set_number: SATS-PT029
+  - set_number: STAS-PT029
     set_name: 2-Player Starter Set
     rarities:
     - Common
