--- a/data/cards/05133471.yaml
+++ b/data/cards/05133471.yaml
@@ -71,7 +71,7 @@ sets:
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Super Rare
-  - set_number: SATS-EN038
+  - set_number: STAS-EN038
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -104,7 +104,7 @@ sets:
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Super Rare
-  - set_number: SATS-DE038
+  - set_number: STAS-DE038
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -137,7 +137,7 @@ sets:
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Super Rare
-  - set_number: SATS-FR038
+  - set_number: STAS-FR038
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -170,7 +170,7 @@ sets:
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Super Rare
-  - set_number: SATS-IT038
+  - set_number: STAS-IT038
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -203,7 +203,7 @@ sets:
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Super Rare
-  - set_number: SATS-PT038
+  - set_number: STAS-PT038
     set_name: 2-Player Starter Set
     rarities:
     - Common
