--- a/data/cards/12482652.yaml
+++ b/data/cards/12482652.yaml
@@ -67,7 +67,7 @@ sets:
     set_name: Dark Crisis (25th Anniversary Edition)
     rarities:
     - Common
-  - set_number: SATS-EN006
+  - set_number: STAS-EN006
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -96,7 +96,7 @@ sets:
     set_name: Dark Crisis (25th Anniversary Edition)
     rarities:
     - Common
-  - set_number: SATS-DE006
+  - set_number: STAS-DE006
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -121,7 +121,7 @@ sets:
     set_name: Dark Crisis (25th Anniversary Edition)
     rarities:
     - Common
-  - set_number: SATS-FR006
+  - set_number: STAS-FR006
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -146,7 +146,7 @@ sets:
     set_name: Dark Crisis (25th Anniversary Edition)
     rarities:
     - Common
-  - set_number: SATS-IT006
+  - set_number: STAS-IT006
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -167,7 +167,7 @@ sets:
     set_name: Dark Crisis (25th Anniversary Edition)
     rarities:
     - Common
-  - set_number: SATS-PT006
+  - set_number: STAS-PT006
     set_name: 2-Player Starter Set
     rarities:
     - Common
