--- a/data/cards/17626381.yaml
+++ b/data/cards/17626381.yaml
@@ -73,7 +73,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
-  - set_number: SATS-EN037
+  - set_number: STAS-EN037
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -110,7 +110,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
-  - set_number: SATS-DE037
+  - set_number: STAS-DE037
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -147,7 +147,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
-  - set_number: SATS-FR037
+  - set_number: STAS-FR037
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -184,7 +184,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
-  - set_number: SATS-IT037
+  - set_number: STAS-IT037
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -221,7 +221,7 @@ sets:
     set_name: Valiant Smashers
     rarities:
     - Rare
-  - set_number: SATS-PT037
+  - set_number: STAS-PT037
     set_name: 2-Player Starter Set
     rarities:
     - Common
