--- a/data/cards/20721928.yaml
+++ b/data/cards/20721928.yaml
@@ -100,7 +100,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: SATS-EN001
+  - set_number: STAS-EN001
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -173,7 +173,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: SATS-DE001
+  - set_number: STAS-DE001
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -222,7 +222,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: SATS-FR001
+  - set_number: STAS-FR001
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -279,7 +279,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: SATS-IT001
+  - set_number: STAS-IT001
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -308,7 +308,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: SATS-PT001
+  - set_number: STAS-PT001
     set_name: 2-Player Starter Set
     rarities:
     - Common
