--- a/data/cards/38445524.yaml
+++ b/data/cards/38445524.yaml
@@ -65,7 +65,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
-  - set_number: SATS-EN007
+  - set_number: STAS-EN007
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -90,7 +90,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
-  - set_number: SATS-DE007
+  - set_number: STAS-DE007
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -115,7 +115,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
-  - set_number: SATS-FR007
+  - set_number: STAS-FR007
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -140,7 +140,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
-  - set_number: SATS-IT007
+  - set_number: STAS-IT007
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -153,7 +153,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
-  - set_number: SATS-PT007
+  - set_number: STAS-PT007
     set_name: 2-Player Starter Set
     rarities:
     - Common
