--- a/data/cards/42566602.yaml
+++ b/data/cards/42566602.yaml
@@ -64,7 +64,7 @@ sets:
     set_name: Legendary Hero Decks
     rarities:
     - Ultra Rare
-  - set_number: SATS-EN042
+  - set_number: STAS-EN042
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
@@ -77,7 +77,7 @@ sets:
     set_name: Legendary Hero Decks
     rarities:
     - Ultra Rare
-  - set_number: SATS-DE042
+  - set_number: STAS-DE042
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
@@ -90,7 +90,7 @@ sets:
     set_name: Legendary Hero Decks
     rarities:
     - Ultra Rare
-  - set_number: SATS-FR042
+  - set_number: STAS-FR042
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
@@ -103,7 +103,7 @@ sets:
     set_name: Legendary Hero Decks
     rarities:
     - Ultra Rare
-  - set_number: SATS-IT042
+  - set_number: STAS-IT042
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
@@ -116,7 +116,7 @@ sets:
     set_name: Legendary Hero Decks
     rarities:
     - Ultra Rare
-  - set_number: SATS-PT042
+  - set_number: STAS-PT042
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
