--- a/data/cards/45812361.yaml
+++ b/data/cards/45812361.yaml
@@ -71,7 +71,7 @@ sets:
     set_name: 'Starter Deck: Link Strike'
     rarities:
     - Common
-  - set_number: SATS-EN014
+  - set_number: STAS-EN014
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -102,7 +102,7 @@ sets:
     set_name: 'Starter Deck: Link Strike'
     rarities:
     - Common
-  - set_number: SATS-DE014
+  - set_number: STAS-DE014
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -133,7 +133,7 @@ sets:
     set_name: 'Starter Deck: Link Strike'
     rarities:
     - Common
-  - set_number: SATS-FR014
+  - set_number: STAS-FR014
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -164,7 +164,7 @@ sets:
     set_name: 'Starter Deck: Link Strike'
     rarities:
     - Common
-  - set_number: SATS-IT014
+  - set_number: STAS-IT014
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -191,7 +191,7 @@ sets:
     set_name: 'Starter Deck: Link Strike'
     rarities:
     - Common
-  - set_number: SATS-PT014
+  - set_number: STAS-PT014
     set_name: 2-Player Starter Set
     rarities:
     - Common
