--- a/data/cards/56099748.yaml
+++ b/data/cards/56099748.yaml
@@ -63,7 +63,7 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
-  - set_number: SATS-EN019
+  - set_number: STAS-EN019
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -84,7 +84,7 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
-  - set_number: SATS-DE019
+  - set_number: STAS-DE019
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -105,7 +105,7 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
-  - set_number: SATS-FR019
+  - set_number: STAS-FR019
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -126,7 +126,7 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
-  - set_number: SATS-IT019
+  - set_number: STAS-IT019
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -147,7 +147,7 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
-  - set_number: SATS-PT019
+  - set_number: STAS-PT019
     set_name: 2-Player Starter Set
     rarities:
     - Common
