--- a/data/cards/56948373.yaml
+++ b/data/cards/56948373.yaml
@@ -55,7 +55,7 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Common
-  - set_number: SATS-EN026
+  - set_number: STAS-EN026
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -89,7 +89,7 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Common
-  - set_number: SATS-FR026
+  - set_number: STAS-FR026
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -102,7 +102,7 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Common
-  - set_number: SATS-IT026
+  - set_number: STAS-IT026
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -111,7 +111,7 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Common
-  - set_number: SATS-PT026
+  - set_number: STAS-PT026
     set_name: 2-Player Starter Set
     rarities:
     - Common
