--- a/data/cards/59919307.yaml
+++ b/data/cards/59919307.yaml
@@ -61,7 +61,7 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
-  - set_number: SATS-EN040
+  - set_number: STAS-EN040
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -86,7 +86,7 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
-  - set_number: SATS-DE040
+  - set_number: STAS-DE040
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -111,7 +111,7 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
-  - set_number: SATS-FR040
+  - set_number: STAS-FR040
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -136,7 +136,7 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
-  - set_number: SATS-IT040
+  - set_number: STAS-IT040
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -161,7 +161,7 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
-  - set_number: SATS-PT040
+  - set_number: STAS-PT040
     set_name: 2-Player Starter Set
     rarities:
     - Common
