--- a/data/cards/62279055.yaml
+++ b/data/cards/62279055.yaml
@@ -118,7 +118,7 @@ sets:
     set_name: 'Structure Deck: Rokket Revolt'
     rarities:
     - Common
-  - set_number: SATS-EN027
+  - set_number: STAS-EN027
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -228,7 +228,7 @@ sets:
     set_name: 'Structure Deck: Rokket Revolt'
     rarities:
     - Common
-  - set_number: SATS-EN027
+  - set_number: STAS-EN027
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -314,7 +314,7 @@ sets:
     set_name: 'Structure Deck: Rokket Revolt'
     rarities:
     - Common
-  - set_number: SATS-FR027
+  - set_number: STAS-FR027
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -400,7 +400,7 @@ sets:
     set_name: 'Structure Deck: Rokket Revolt'
     rarities:
     - Common
-  - set_number: SATS-IT027
+  - set_number: STAS-IT027
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -441,7 +441,7 @@ sets:
     set_name: 'Structure Deck: Rokket Revolt'
     rarities:
     - Common
-  - set_number: SATS-PT027
+  - set_number: STAS-PT027
     set_name: 2-Player Starter Set
     rarities:
     - Common
