--- a/data/cards/66788016.yaml
+++ b/data/cards/66788016.yaml
@@ -98,7 +98,7 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Rare
-  - set_number: SATS-EN022
+  - set_number: STAS-EN022
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -228,7 +228,7 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Rare
-  - set_number: SATS-DE022
+  - set_number: STAS-DE022
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -302,7 +302,7 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Rare
-  - set_number: SATS-FR022
+  - set_number: STAS-FR022
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -376,7 +376,7 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Rare
-  - set_number: SATS-IT022
+  - set_number: STAS-IT022
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -421,7 +421,7 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Rare
-  - set_number: SATS-PT022
+  - set_number: STAS-PT022
     set_name: 2-Player Starter Set
     rarities:
     - Common
