--- a/data/cards/72022087.yaml
+++ b/data/cards/72022087.yaml
@@ -50,7 +50,7 @@ sets:
     set_name: 'Legendary Duelists: Synchro Storm'
     rarities:
     - Common
-  - set_number: SATS-EN035
+  - set_number: STAS-EN035
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -76,7 +76,7 @@ sets:
     set_name: 'Legendary Duelists: Synchro Storm'
     rarities:
     - Common
-  - set_number: SATS-DE035
+  - set_number: STAS-DE035
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -94,7 +94,7 @@ sets:
     set_name: 'Legendary Duelists: Synchro Storm'
     rarities:
     - Common
-  - set_number: SATS-FR035
+  - set_number: STAS-FR035
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -112,7 +112,7 @@ sets:
     set_name: 'Legendary Duelists: Synchro Storm'
     rarities:
     - Common
-  - set_number: SATS-IT035
+  - set_number: STAS-IT035
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -121,7 +121,7 @@ sets:
     set_name: 'Legendary Duelists: Synchro Storm'
     rarities:
     - Common
-  - set_number: SATS-PT035
+  - set_number: STAS-PT035
     set_name: 2-Player Starter Set
     rarities:
     - Common
