--- a/data/cards/73915051.yaml
+++ b/data/cards/73915051.yaml
@@ -113,7 +113,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
-  - set_number: SATS-EN013
+  - set_number: STAS-EN013
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -206,7 +206,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
-  - set_number: SATS-DE013
+  - set_number: STAS-DE013
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -287,7 +287,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
-  - set_number: SATS-FR013
+  - set_number: STAS-FR013
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -368,7 +368,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
-  - set_number: SATS-IT013
+  - set_number: STAS-IT013
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -432,7 +432,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
-  - set_number: SATS-PT013
+  - set_number: STAS-PT013
     set_name: 2-Player Starter Set
     rarities:
     - Common
