--- a/data/cards/80770678.yaml
+++ b/data/cards/80770678.yaml
@@ -61,7 +61,7 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Rare
-  - set_number: SATS-EN003
+  - set_number: STAS-EN003
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -106,7 +106,7 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Rare
-  - set_number: SATS-DE003
+  - set_number: STAS-DE003
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -131,7 +131,7 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Rare
-  - set_number: SATS-FR003
+  - set_number: STAS-FR003
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -156,7 +156,7 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Rare
-  - set_number: SATS-IT003
+  - set_number: STAS-IT003
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -173,7 +173,7 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Rare
-  - set_number: SATS-PT003
+  - set_number: STAS-PT003
     set_name: 2-Player Starter Set
     rarities:
     - Common
