--- a/data/cards/82197831.yaml
+++ b/data/cards/82197831.yaml
@@ -66,7 +66,7 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
-  - set_number: SATS-EN043
+  - set_number: STAS-EN043
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
@@ -79,7 +79,7 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
-  - set_number: SATS-DE043
+  - set_number: STAS-DE043
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
@@ -92,7 +92,7 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
-  - set_number: SATS-FR043
+  - set_number: STAS-FR043
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
@@ -105,7 +105,7 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
-  - set_number: SATS-IT043
+  - set_number: STAS-IT043
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
@@ -118,7 +118,7 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
-  - set_number: SATS-PT043
+  - set_number: STAS-PT043
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
