--- a/data/cards/85087012.yaml
+++ b/data/cards/85087012.yaml
@@ -117,7 +117,7 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
-  - set_number: SATS-EN030
+  - set_number: STAS-EN030
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -202,7 +202,7 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
-  - set_number: SATS-DE030
+  - set_number: STAS-DE030
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -275,7 +275,7 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
-  - set_number: SATS-FR030
+  - set_number: STAS-FR030
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -352,7 +352,7 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
-  - set_number: SATS-IT030
+  - set_number: STAS-IT030
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -408,7 +408,7 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
-  - set_number: SATS-PT030
+  - set_number: STAS-PT030
     set_name: 2-Player Starter Set
     rarities:
     - Common
