--- a/data/cards/87322377.yaml
+++ b/data/cards/87322377.yaml
@@ -73,7 +73,7 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Common
-  - set_number: SATS-EN004
+  - set_number: STAS-EN004
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -110,7 +110,7 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Common
-  - set_number: SATS-DE004
+  - set_number: STAS-DE004
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -139,7 +139,7 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Common
-  - set_number: SATS-FR004
+  - set_number: STAS-FR004
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -168,7 +168,7 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Common
-  - set_number: SATS-IT004
+  - set_number: STAS-IT004
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -193,7 +193,7 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Common
-  - set_number: SATS-PT004
+  - set_number: STAS-PT004
     set_name: 2-Player Starter Set
     rarities:
     - Common
