--- a/data/cards/89386122.yaml
+++ b/data/cards/89386122.yaml
@@ -60,7 +60,7 @@ sets:
     rarities:
     - Common
     - Duel Terminal Normal Parallel Rare
-  - set_number: SATS-EN008
+  - set_number: STAS-EN008
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -82,7 +82,7 @@ sets:
     rarities:
     - Common
     - Duel Terminal Normal Parallel Rare
-  - set_number: SATS-DE008
+  - set_number: STAS-DE008
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -100,7 +100,7 @@ sets:
     rarities:
     - Common
     - Duel Terminal Normal Parallel Rare
-  - set_number: SATS-FR008
+  - set_number: STAS-FR008
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -118,7 +118,7 @@ sets:
     rarities:
     - Common
     - Duel Terminal Normal Parallel Rare
-  - set_number: SATS-IT008
+  - set_number: STAS-IT008
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -128,7 +128,7 @@ sets:
     rarities:
     - Common
     - Duel Terminal Normal Parallel Rare
-  - set_number: SATS-PT008
+  - set_number: STAS-PT008
     set_name: 2-Player Starter Set
     rarities:
     - Common
