--- a/data/cards/93104632.yaml
+++ b/data/cards/93104632.yaml
@@ -53,7 +53,7 @@ sets:
     set_name: 'Egyptian God Deck: Slifer the Sky Dragon'
     rarities:
     - Common
-  - set_number: SATS-EN016
+  - set_number: STAS-EN016
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -70,7 +70,7 @@ sets:
     set_name: 'Egyptian God Deck: Slifer the Sky Dragon'
     rarities:
     - Common
-  - set_number: SATS-DE016
+  - set_number: STAS-DE016
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -87,7 +87,7 @@ sets:
     set_name: 'Egyptian God Deck: Slifer the Sky Dragon'
     rarities:
     - Common
-  - set_number: SATS-FR016
+  - set_number: STAS-FR016
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -104,7 +104,7 @@ sets:
     set_name: 'Egyptian God Deck: Slifer the Sky Dragon'
     rarities:
     - Common
-  - set_number: SATS-IT016
+  - set_number: STAS-IT016
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -121,7 +121,7 @@ sets:
     set_name: 'Egyptian God Deck: Slifer the Sky Dragon'
     rarities:
     - Common
-  - set_number: SATS-PT016
+  - set_number: STAS-PT016
     set_name: 2-Player Starter Set
     rarities:
     - Common
