--- a/data/cards/95281259.yaml
+++ b/data/cards/95281259.yaml
@@ -122,7 +122,7 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
-  - set_number: SATS-EN015
+  - set_number: STAS-EN015
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -208,7 +208,7 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
-  - set_number: SATS-DE015
+  - set_number: STAS-DE015
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -290,7 +290,7 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
-  - set_number: SATS-FR015
+  - set_number: STAS-FR015
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -372,7 +372,7 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
-  - set_number: SATS-IT015
+  - set_number: STAS-IT015
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -414,7 +414,7 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
-  - set_number: SATS-PT015
+  - set_number: STAS-PT015
     set_name: 2-Player Starter Set
     rarities:
     - Common
