--- a/data/cards/97268402.yaml
+++ b/data/cards/97268402.yaml
@@ -407,7 +407,7 @@ sets:
     - Gold Rare
     - Gold Secret Rare
   - set_number: DS14-JPL20
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   - set_number: SPTR-JP050
@@ -476,7 +476,7 @@ sets:
     - Gold Rare
     - Gold Secret Rare
   - set_number: DS14-KRL20
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   - set_number: SPTR-KR050
