--- a/data/cards/97923414.yaml
+++ b/data/cards/97923414.yaml
@@ -51,7 +51,7 @@ sets:
     set_name: Dark Revelation Volume 1
     rarities:
     - Common
-  - set_number: SATS-EN002
+  - set_number: STAS-EN002
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -64,7 +64,7 @@ sets:
     set_name: Dark Revelation Volume 1
     rarities:
     - Common
-  - set_number: SATS-DE002
+  - set_number: STAS-DE002
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -73,7 +73,7 @@ sets:
     set_name: Dark Revelation Volume 1
     rarities:
     - Common
-  - set_number: SATS-FR002
+  - set_number: STAS-FR002
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -82,7 +82,7 @@ sets:
     set_name: Dark Revelation Volume 1
     rarities:
     - Common
-  - set_number: SATS-IT002
+  - set_number: STAS-IT002
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -91,7 +91,7 @@ sets:
     set_name: Dark Revelation Volume 1
     rarities:
     - Common
-  - set_number: SATS-PT002
+  - set_number: STAS-PT002
     set_name: 2-Player Starter Set
     rarities:
     - Common
