--- a/data/cards/05650082.yaml
+++ b/data/cards/05650082.yaml
@@ -63,7 +63,7 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
-  - set_number: SATS-EN012
+  - set_number: STAS-EN012
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -88,7 +88,7 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
-  - set_number: SATS-DE012
+  - set_number: STAS-DE012
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -113,7 +113,7 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
-  - set_number: SATS-FR012
+  - set_number: STAS-FR012
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -138,7 +138,7 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
-  - set_number: SATS-IT012
+  - set_number: STAS-IT012
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -163,7 +163,7 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
-  - set_number: SATS-PT012
+  - set_number: STAS-PT012
     set_name: 2-Player Starter Set
     rarities:
     - Common
