--- a/data/cards/17272964.yaml
+++ b/data/cards/17272964.yaml
@@ -51,11 +51,11 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Super Rare
-  - set_number: SATS-EN020
+  - set_number: STAS-EN020
     set_name: 2-Player Starter Set
     rarities:
     - Common
-  - set_number: SATS-EN039
+  - set_number: STAS-EN039
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -64,11 +64,11 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Super Rare
-  - set_number: SATS-DE020
+  - set_number: STAS-DE020
     set_name: 2-Player Starter Set
     rarities:
     - Common
-  - set_number: SATS-DE039
+  - set_number: STAS-DE039
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -77,11 +77,11 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Super Rare
-  - set_number: SATS-FR020
+  - set_number: STAS-FR020
     set_name: 2-Player Starter Set
     rarities:
     - Common
-  - set_number: SATS-FR039
+  - set_number: STAS-FR039
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -90,11 +90,11 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Super Rare
-  - set_number: SATS-IT020
+  - set_number: STAS-IT020
     set_name: 2-Player Starter Set
     rarities:
     - Common
-  - set_number: SATS-IT039
+  - set_number: STAS-IT039
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -103,11 +103,11 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Super Rare
-  - set_number: SATS-PT020
+  - set_number: STAS-PT020
     set_name: 2-Player Starter Set
     rarities:
     - Common
-  - set_number: SATS-PT039
+  - set_number: STAS-PT039
     set_name: 2-Player Starter Set
     rarities:
     - Common
