--- a/data/cards/18756904.yaml
+++ b/data/cards/18756904.yaml
@@ -65,7 +65,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
-  - set_number: SATS-EN034
+  - set_number: STAS-EN034
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -94,7 +94,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
-  - set_number: SATS-DE034
+  - set_number: STAS-DE034
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -123,7 +123,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
-  - set_number: SATS-FR034
+  - set_number: STAS-FR034
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -152,7 +152,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
-  - set_number: SATS-IT034
+  - set_number: STAS-IT034
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -177,7 +177,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
-  - set_number: SATS-PT034
+  - set_number: STAS-PT034
     set_name: 2-Player Starter Set
     rarities:
     - Common
