--- a/data/cards/64977888.yaml
+++ b/data/cards/64977888.yaml
@@ -59,7 +59,7 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
-  - set_number: SATS-IT011
+  - set_number: STAS-IT011
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -72,7 +72,7 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
-  - set_number: SATS-DE011
+  - set_number: STAS-DE011
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -85,7 +85,7 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
-  - set_number: SATS-FR011
+  - set_number: STAS-FR011
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -98,7 +98,7 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
-  - set_number: SATS-IT011
+  - set_number: STAS-IT011
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -111,7 +111,7 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
-  - set_number: SATS-PT011
+  - set_number: STAS-PT011
     set_name: 2-Player Starter Set
     rarities:
     - Common
