--- a/data/cards/83746708.yaml
+++ b/data/cards/83746708.yaml
@@ -91,7 +91,7 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
-  - set_number: SATS-EN028
+  - set_number: STAS-EN028
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -152,7 +152,7 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
-  - set_number: SATS-DE028
+  - set_number: STAS-DE028
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -201,7 +201,7 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
-  - set_number: SATS-FR028
+  - set_number: STAS-FR028
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -250,7 +250,7 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
-  - set_number: SATS-IT028
+  - set_number: STAS-IT028
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -271,7 +271,7 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
-  - set_number: SATS-PT028
+  - set_number: STAS-PT028
     set_name: 2-Player Starter Set
     rarities:
     - Common
