--- a/data/cards/89127526.yaml
+++ b/data/cards/89127526.yaml
@@ -55,7 +55,7 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
-  - set_number: SATS-EN021
+  - set_number: STAS-EN021
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -68,7 +68,7 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
-  - set_number: SATS-DE021
+  - set_number: STAS-DE021
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -81,7 +81,7 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
-  - set_number: SATS-FR021
+  - set_number: STAS-FR021
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -94,7 +94,7 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
-  - set_number: SATS-IT021
+  - set_number: STAS-IT021
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -103,7 +103,7 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
-  - set_number: SATS-PT021
+  - set_number: STAS-PT021
     set_name: 2-Player Starter Set
     rarities:
     - Common
