--- a/data/cards/90465153.yaml
+++ b/data/cards/90465153.yaml
@@ -81,7 +81,7 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Ultra Rare
-  - set_number: SATS-FR044
+  - set_number: STAS-FR044
     set_name: 2-Player Starter Set
     rarities:
     - Ultra Rare
