--- a/data/cards/97021916.yaml
+++ b/data/cards/97021916.yaml
@@ -77,7 +77,7 @@ sets:
     set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
-  - set_number: SATS-EN032
+  - set_number: STAS-EN032
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -124,7 +124,7 @@ sets:
     set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
-  - set_number: SATS-DE032
+  - set_number: STAS-DE032
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -159,7 +159,7 @@ sets:
     set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
-  - set_number: SATS-FR032
+  - set_number: STAS-FR032
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -194,7 +194,7 @@ sets:
     set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
-  - set_number: SATS-IT032
+  - set_number: STAS-IT032
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -220,7 +220,7 @@ sets:
     set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
-  - set_number: SATS-PT032
+  - set_number: STAS-PT032
     set_name: 2-Player Starter Set
     rarities:
     - Common
