--- a/data/cards/98806751.yaml
+++ b/data/cards/98806751.yaml
@@ -53,7 +53,7 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
-  - set_number: SATS-EN018
+  - set_number: STAS-EN018
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -66,7 +66,7 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
-  - set_number: SATS-DE018
+  - set_number: STAS-DE018
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -79,7 +79,7 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
-  - set_number: SATS-FR018
+  - set_number: STAS-FR018
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -92,7 +92,7 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
-  - set_number: SATS-IT018
+  - set_number: STAS-IT018
     set_name: 2-Player Starter Set
     rarities:
     - Common
@@ -105,7 +105,7 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
-  - set_number: SATS-PT018
+  - set_number: STAS-PT018
     set_name: 2-Player Starter Set
     rarities:
     - Common
