--- a/data/cards/03594985.yaml
+++ b/data/cards/03594985.yaml
@@ -12,7 +12,7 @@ name:
   ko: 마제스펙터 드라코
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 威风魔灵・麒龙
 text:
   en: |-
     2 Level 4 monsters
@@ -29,7 +29,12 @@ text:
     레벨 4 몬스터 × 2
     레벨 4 를 펜듈럼 소환 가능한 경우에 엑스트라 덱의 앞면의 이 카드는 펜듈럼 소환할 수 있다. 이 카드명의 ①의 몬스터 효과는 1턴에 2번까지 사용할 수 있다. ①: 이 카드가 몬스터 존에 존재하는 상태에서, 몬스터가 릴리스되었을 경우, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 덱에서 레벨 6 이하의 마법사족 / 바람 속성 몬스터 1장을 특수 소환한다. ②: 몬스터 존의 이 카드가 전투 / 효과로 파괴되었을 경우, 또는 릴리스되었을 경우에 발동할 수 있다. 이 카드를 자신의 펜듈럼 존에 놓는다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    等级４怪兽×２
+    在可灵摆召唤等级４的情况下，额外牌组表侧的此卡可以灵摆召唤。
+    此卡名的①怪兽效果１回合最多可使用２次。
+    ①：此卡存在于怪兽区域的状态下，怪兽被解放的情况下，去除此卡的１个超量素材可以发动。从牌组将１只等级６以下的魔法师族・风属性怪兽特殊召唤。
+    ②：怪兽区域的此卡因战斗・效果被破坏的情况下，或被解放的情况下可以发动。将此卡放在自己的灵摆区域。
 card_type: Monster
 monster_type_line: Spellcaster / Xyz / Pendulum / Effect
 attribute: WIND
@@ -50,7 +55,9 @@ pendulum_effect:
   ko: |-
     이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 다른 한쪽 자신의 펜듈럼 존에 "마제스펙터" 카드나 "룡검사" 카드가 존재할 경우에 발동할 수 있다. 덱에서 "마제스펙터" 카드 1장을 패에 넣는다. 그 후, 자신의 펜듈럼 존의 카드 1장을 파괴할 수 있다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    此卡名的灵摆效果１回合仅可使用１次。
+    ①：另一方自己的灵摆区域存在“威风魔灵”卡或“龙剑士”卡的情况下可以发动。从牌组将１张“威风魔灵”卡加入手牌。然后，可将自己的灵摆区域的１张卡破坏。
 materials: 2 Level 4 monsters
 series:
 - Majespecter
