--- a/data/cards/51073802.yaml
+++ b/data/cards/51073802.yaml
@@ -12,7 +12,7 @@ name:
   ko: 마제스펙터 포큐파인
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 威风魔灵・山颪豪猪
 text:
   en: |-
     While this card is in your Monster Zone, your opponent cannot target it with card effects, also it cannot be destroyed by your opponent's card effects. You can only use each of the following effects of "Majespecter Porcupine - Yamaarashi" once per turn. During the Main Phase, if you control a "Majespecter" monster (Quick Effect): You can Special Summon this card from your hand. If this card is Normal or Special Summoned: You can target 1 "Majespecter" Spell in your GY; Set it.
@@ -26,7 +26,11 @@ text:
   ko: |-
     이 카드명의 ①②의 몬스터 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 / 상대의 메인 페이즈에, 자신 필드에 "마제스펙터" 몬스터가 존재할 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드를 일반 소환 / 특수 소환했을 경우, 자신 묘지의 "마제스펙터" 마법 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 자신 필드에 세트한다. ③: 이 카드가 몬스터 존에 존재하는 한, 이 카드는 상대 효과로는 파괴되지 않으며, 상대는 이 카드를 효과의 대상으로 할 수 없다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    此卡名的①②怪兽效果１回合仅可各使用１次。
+    ①：在自己・对手的主要阶段，自己场上存在“威风魔灵”怪兽的情况下可以发动。从手牌将此卡特殊召唤。
+    ②：此卡召唤・特殊召唤的情况下，以自己墓地的１张“威风魔灵”魔法卡为对象可以发动。将该卡放置在自己场上。
+    ③：只要此卡存在于怪兽区域，此卡不会因对手的效果被破坏，对手不可将此卡作为效果的对象。
 card_type: Monster
 monster_type_line: Spellcaster / Pendulum / Effect
 attribute: WIND
