--- a/data/cards/35405755.yaml
+++ b/data/cards/35405755.yaml
@@ -7,12 +7,12 @@ name:
   fr: Kurikara Divincarnée
   it: Kurikara Divincarnata
   pt: Kurikara Divincarnada
-  ja: <ruby>倶<rt>く</rt></ruby><ruby>利<rt>り</rt></ruby><ruby>伽<rt>か</rt></ruby><ruby>羅<rt>ら</rt></ruby><ruby>天<rt>てん</rt></ruby><ruby>童<rt>どう</rt></ruby>
+  ja: <ruby>俱<rt>く</rt></ruby><ruby>利<rt>り</rt></ruby><ruby>伽<rt>か</rt></ruby><ruby>羅<rt>ら</rt></ruby><ruby>天<rt>てん</rt></ruby><ruby>童<rt>どう</rt></ruby>
   ja_romaji: Kurikara Tendō
   ko: 쿠리카라천동
   ko_rr: Kurikaracheondong
   zh-TW:
-  zh-CN: 倶利伽罗天童
+  zh-CN: 俱利伽罗天童
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand) by Tributing all face-up monsters on the field that activated their effects this turn in your opponent's Monster Zone. Gains 1500 ATK for each monster Tributed to Special Summon this card. During your End Phase: You can target 1 monster in your opponent's GY; Special Summon it to your field. You can only use this effect of "Kurikara Divincarnate" once per turn.
