--- a/data/cards/71095768.yaml
+++ b/data/cards/71095768.yaml
@@ -8,7 +8,7 @@ name:
   it: Bujinki Ahashima
   pt: Bujinki Ahashima
   ja: <ruby>武<rt>ぶ</rt></ruby><ruby>神<rt>じん</rt></ruby><ruby>姫<rt>き</rt></ruby>－アハシマ
-  ja_romaji: Bujinki - Ahashima
+  ja_romaji: Bujinki - Awashima
   ko: 무사신희－아하시마
   ko_rr: Musasinhui - Ahasima
   zh-TW:
