--- a/data/cards/yugipedia1037581.yaml
+++ b/data/cards/yugipedia1037581.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can Special Summon this card (from your hand) by sending 1 Insect, Plant, or Reptile monster from your hand to the GY. You can only Special Summon "Raika no Marikoube" once per turn this way. If this card is Normal or Special Summoned: You can add up to 2 or your "Raika" cards with different names that are banished and/or in your Deck to your hand, except "Raika no Marikoube", then banish 1 card from your hand, also you cannot Special Summon monsters for the rest of this turn, except Insect, Plant, and Reptile monsters. You can only use this effect of "Raika no Marikoube" once per turn.
+    You can Special Summon this card (from your hand) by sending 1 Insect, Plant, or Reptile monster from your hand to the GY. You can only Special Summon "Raika no Marikoube" once per turn this way. If this card is Normal or Special Summoned: You can add up to 2 of your "Raika" cards with different names that are banished and/or in your Deck to your hand, except "Raika no Marikoube", then banish 1 card from your hand, also you cannot Special Summon monsters for the rest of this turn, except Insect, Plant, and Reptile monsters. You can only use this effect of "Raika no Marikoube" once per turn.
   de:
   es:
   fr:
