--- a/data/rush/17724.yaml
+++ b/data/rush/17724.yaml
@@ -46,12 +46,19 @@ legend: true
 images:
 - index: 1
   image: PotofAvarice-RDMRP1-JP-ScR.png
+  illustration: PotofAvarice-G002-JP-VG-artwork.png
+- index: 2
+  image: PotofAvarice-RDS23P-JP-OP.png
 sets:
   ja:
   - set_number: RD/MRP1-JP100
     set_name: Megaroad Pack
     rarities:
     - Secret Rare
+  - set_number: RD/S23P-JP011
+    set_name: Tournament Battle February 2024 prize card
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/MRP1-KR100
     set_name: Megaroad Pack
