--- a/data/cards/37457534.yaml
+++ b/data/cards/37457534.yaml
@@ -8,7 +8,7 @@ name:
   it: Carro Armato-Ingranaggio Antico
   pt:
   ja: <ruby>古代の機械戦車<rt>アンティーク・ギアタンク</rt></ruby>
-  ja_romaji: Antīku Giatanku
+  ja_romaji: Antīku Gia Tanku
   ko: 앤틱 기어 탱크
   ko_rr:
   zh-TW:
