--- a/data/cards/42878636.yaml
+++ b/data/cards/42878636.yaml
@@ -8,7 +8,7 @@ name:
   it: Segugio da Caccia-Ingranaggio Antico
   pt: Cão de Caça do Mecanismo Antigo
   ja: <ruby>古代の機械猟犬<rt>アンティーク・ギアハウンドドッグ</rt></ruby>
-  ja_romaji: Antīku Gia Haundo Doggu
+  ja_romaji: Antīku Gia Haundodoggu
   ko: 앤틱 기어 하운드독
   ko_rr: Aentik Gieo Haundeudok
   zh-TW:
