--- a/data/cards/59811955.yaml
+++ b/data/cards/59811955.yaml
@@ -8,7 +8,7 @@ name:
   it: Laboratorio-Ingranaggio Antico
   pt: Oficina do Mecanismo Antigo
   ja: <ruby>古代の整備場<rt>アンティーク・ギアガレージ</rt></ruby>
-  ja_romaji: Antīku Giagarēji
+  ja_romaji: Antīku Gia Garēji
   ko: 앤틱 기어 개라지
   ko_rr:
   zh-TW:
