--- a/data/cards/67829249.yaml
+++ b/data/cards/67829249.yaml
@@ -8,7 +8,7 @@ name:
   it: Trivella-Ingranaggio Antico
   pt:
   ja: <ruby>古代の採掘機<rt>アンティーク・ギアドリル</rt></ruby>
-  ja_romaji: Antīku Giadoriru
+  ja_romaji: Antīku Gia Doriru
   ko: 앤틱 기어 드릴
   ko_rr:
   zh-TW:
