--- a/data/cards/95735217.yaml
+++ b/data/cards/95735217.yaml
@@ -8,7 +8,7 @@ name:
   it: Golem-Ingranaggio Antico - Picchiatore Finale
   pt: Golem do Mecanismo Antigo - Murro Definitivo
   ja: <ruby>古代の機械巨人<rt>アンティーク・ギアゴーレム</rt></ruby>－アルティメット・パウンド
-  ja_romaji: Antīku Giagōremu - Arutimetto Paundo
+  ja_romaji: Antīku Gia Gōremu - Arutimetto Paundo
   ko: 앤틱 기어 골렘－얼티미트 파운드
   ko_rr:
   zh-TW:
