--- a/data/cards/10509340.yaml
+++ b/data/cards/10509340.yaml
@@ -8,7 +8,7 @@ name:
   it: Bestia-Ingranaggio Antico
   pt: Besta do Mecanismo Antigo
   ja: <ruby>古代の機械獣<rt>アンティーク・ギアビースト</rt></ruby>
-  ja_romaji: Antīku Giabīsuto
+  ja_romaji: Antīku Gia Bīsuto
   ko: 앤틱 기어 비스트
   ko_rr:
   zh-TW:
