--- a/data/cards/37683547.yaml
+++ b/data/cards/37683547.yaml
@@ -4,7 +4,7 @@ name:
   en: Albaz the Ashen
   de: Albaz der Aschfahle
   es: Albaz de Cenizas
-  fr: Albaz le Cendreu
+  fr: Albaz le Cendreux
   it: Albaz il Cinereo
   pt: Arbaz, o Cinzento
   ja: <ruby>灰<rt>かい</rt></ruby><ruby>燼<rt>じん</rt></ruby>のアルバス
@@ -21,7 +21,7 @@ text:
   es: |-
     El nombre de esta carta se convierte en "Caído de Albaz" mientras está en el Campo o en el Cementerio. Mientras un Monstruo de Fusión de Nivel 8 esté en tu Cementerio, esta carta gana 200 ATK por cada monstruo en tu Cementerio, y además tu adversario no puede seleccionar otros monstruos que controlas con efectos de cartas. Si uno o más monstruos que controlas dejan el Campo por efecto de una carta del adversario, mientras esta carta y un Monstruo de Fusión están en tu Cementerio (excepto durante el Damage Step): puedes Invocar esta carta de Modo Especial. Sólo puedes usar este efecto de "Albaz de Cenizas" una vez por turno.
   fr: |-
-    XLe nom de cette carte devient "Albaz le Déchu" tant qu'elle est sur le Terrain ou dans le Cimetière. Tant qu'un Monstre Fusion de Niveau 8 est dans votre Cimetière, cette carte gagne 200 ATK pour chaque monstre dans votre Cimetière, et aussi, votre adversaire ne peut pas cibler d'autres monstres que vous contrôlez avec des effets de carte. Si un ou plusieurs monstres que vous contrôlez quittent le Terrain par un effet de carte de l'adversaire, tant que cette carte et un Monstre Fusion sont dans votre Cimetière (sauf durant la Damage Step) : vous pouvez Invoquer Spécialement cette carte. Vous ne pouvez utiliser cet effet de "Albaz le Cendreux" qu'une fois par tour.
+    Le nom de cette carte devient "Albaz le Déchu" tant qu'elle est sur le Terrain ou dans le Cimetière. Tant qu'un Monstre Fusion de Niveau 8 est dans votre Cimetière, cette carte gagne 200 ATK pour chaque monstre dans votre Cimetière, et aussi, votre adversaire ne peut pas cibler d'autres monstres que vous contrôlez avec des effets de carte. Si un ou plusieurs monstres que vous contrôlez quittent le Terrain par un effet de carte de l'adversaire, tant que cette carte et un Monstre Fusion sont dans votre Cimetière (sauf durant la Damage Step) : vous pouvez Invoquer Spécialement cette carte. Vous ne pouvez utiliser cet effet de "Albaz le Cendreux" qu'une fois par tour.
   it: |-
     Il nome di questa carta diventa "Caduto di Albaz" mentre è sul Terreno o nel Cimitero. Mentre un Mostro Fusione di Livello 8 è nel tuo Cimitero, questa carta guadagna 200 ATK per ogni mostro nel tuo Cimitero, inoltre il tuo avversario non può scegliere come bersaglio altri mostri che controlli con gli effetti delle carte. Se uno o più mostri che controlli lasciano il Terreno per l'effetto di una carta dell'avversario, mentre questa carta e un Mostro Fusione sono nel tuo Cimitero (eccetto durante il Damage Step): puoi Evocare Specialmente questa carta. Puoi utilizzare questo effetto di "Albaz il Cinereo" una sola volta per turno.
   pt: |-
