--- a/data/cards/39303359.yaml
+++ b/data/cards/39303359.yaml
@@ -8,7 +8,7 @@ name:
   it: Cavaliere-Ingranaggio Antico
   pt: Cavaleiro do Mecanismo Antigo
   ja: <ruby>古代の機械騎士<rt>アンティーク・ギアナイト</rt></ruby>
-  ja_romaji: Antīku Gianaito
+  ja_romaji: Antīku Gia Naito
   ko: 앤틱 기어 나이트
   ko_rr:
   zh-TW:
