--- a/data/cards/48017189.yaml
+++ b/data/cards/48017189.yaml
@@ -1,7 +1,7 @@
 konami_id: 19487
 password: 48017189
 name:
-  en: EM:P Gremeowde
+  en: EM:P Meowmine
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: EM：P猫猫手榴弹
 text:
   en: |-
-    If a Link Monster is on the field or in either GY, you can Special Summon this card (from your hand). You can only Special Summon "EM:P Gremeowde" once per turn this way. If a Link-2 monster(s) you control is sent to the GY, or banished face-up (except during the Damage Step): You can banish this card from your GY (if it was there when the monster was sent or banished) or hand (even if not), then target 1 card your opponent controls; return it to the hand. You can only use this effect of "EM:P Gremeowde" once per turn.
+    If a Link Monster is on the field or in either GY, you can Special Summon this card (from your hand). You can only Special Summon "EM:P Meowmine" once per turn this way. If a Link-2 monster you control is sent to the GY or banished face-up (except during the Damage Step): You can banish this card from your GY (if it was there when the monster was sent or banished) or hand (even if not), then target 1 card your opponent controls; return it to the hand. You can only use this effect of "EM:P Meowmine" once per turn.
   de:
   es:
   fr:
@@ -38,8 +38,38 @@ atk: 800
 def: 0
 images:
 - index: 1
-  image: EMPGremeowde-PHNI-JP-R.png
+  image: EMPMeowmine-PHNI-JP-R.png
 sets:
+  en:
+  - set_number: PHNI-EN032
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: PHNI-DE032
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: PHNI-FR032
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: PHNI-IT032
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: PHNI-PT032
+    set_name: Phantom Nightmare
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: PHNI-JP032
     set_name: Phantom Nightmare
@@ -58,9 +88,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1022448
