--- a/data/cards/56094445.yaml
+++ b/data/cards/56094445.yaml
@@ -8,7 +8,7 @@ name:
   it: Soldato-Ingranaggio Antico
   pt: Soldado do Mecanismo Antigo
   ja: <ruby>古代の機械兵士<rt>アンティーク・ギアソルジャー</rt></ruby>
-  ja_romaji: Antīku Giasorujā
+  ja_romaji: Antīku Gia Sorujā
   ko: 앤틱 기어 솔저
   ko_rr:
   zh-TW:
