--- a/data/cards/83104731.yaml
+++ b/data/cards/83104731.yaml
@@ -8,7 +8,7 @@ name:
   it: Golem-Ingranaggio Antico
   pt: Golem do Mecanismo Antigo
   ja: <ruby>古代の機械巨人<rt>アンティーク・ギアゴーレム</rt></ruby>
-  ja_romaji: Antīku Giagōremu
+  ja_romaji: Antīku Gia Gōremu
   ko: 앤틱 기어 골렘
   ko_rr:
   zh-TW:
