--- a/data/cards/92001300.yaml
+++ b/data/cards/92001300.yaml
@@ -8,7 +8,7 @@ name:
   it: Castello-Ingranaggio Antico
   pt: Castelo do Mecanismo Antigo
   ja: <ruby>古代の機械城<rt>アンティーク・ギアキャッスル</rt></ruby>
-  ja_romaji: Antīku Giakyassuru
+  ja_romaji: Antīku Gia Kyassuru
   ko: 앤틱 기어 캐슬
   ko_rr:
   zh-TW:
