--- a/data/cards/yugipedia1040267.yaml
+++ b/data/cards/yugipedia1040267.yaml
@@ -32,6 +32,7 @@ attribute: DARK
 level: 12
 atk: 3000
 def: 3000
+materials: 1 Tuner + 1 or more non-Tuner monsters
 series:
 - Centur-Ion
 images:
