--- a/data/cards/47805931.yaml
+++ b/data/cards/47805931.yaml
@@ -16,22 +16,22 @@ name:
 text:
   en: |-
     2 Level 3 monsters
-    Once per turn: You can detach 1 Xyz Material from this card; all face-up monsters you currently control gain 300 ATK.
+    Once per turn: You can detach 1 material from this card; all monsters you currently control gain 300 ATK.
   de: |-
     2 Monster der Stufe 3
-    Einmal pro Spielzug: Du kannst 1 Xyz-Material von dieser Karte abhängen; alle offenen Monster, die du derzeit kontrollierst, erhalten 300 ATK.
+    Einmal pro Spielzug: Du kannst 1 Material von dieser Karte abhängen; alle Monster, die du derzeit kontrollierst, erhalten 300 ATK.
   es: |-
     2 monstruos de Nivel 3
-    Una vez por turno: puedes desacoplar de esta carta 1 Material Xyz; todos los monstruos boca arriba que controles en este momento ganan 300 ATK.
+    Una vez por turno: puedes desacoplar 1 material de esta carta; todos los monstruos que controles en este momento ganan 300 ATK.
   fr: |-
     2 monstres de Niveau 3
-    Une fois par tour : vous pouvez détacher 1 Matériel Xyz de cette carte ; tous les monstres face recto que vous contrôlez actuellement gagnent 300 ATK.
+    Une fois par tour : vous pouvez détacher 1 Matériel de cette carte ; tous les monstres que vous contrôlez actuellement gagnent 300 ATK.
   it: |-
     2 mostri di Livello 3
-    Una volta per turno: puoi staccare 1 Materiale Xyz da questa carta; tutti i mostri scoperti che controlli attualmente guadagnano 300 ATK.
+    Una volta per turno: puoi staccare 1 materiale da questa carta; tutti i mostri che controlli attualmente guadagnano 300 ATK.
   pt: |-
     2 monstros de Nível 3
-    Uma vez por turno: você pode desassociar 1 Matéria Xyz deste card; todos os monstros com a face para cima que você controla atualmente ganham 300 de ATK.
+    Uma vez por turno: você pode desassociar 1 matéria deste card; todos os monstros que você controla atualmente ganham 300 de ATK.
   ja: |-
     レベル３モンスター×２
     ①：１ターンに１度、このカードのＸ素材を１つ取り除いて発動できる。自分フィールドの全てのモンスターの攻撃力は３００アップする。
