--- a/data/rush/17979.yaml
+++ b/data/rush/17979.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    Your opponent cannot attack other face-up Spellcaster Type monsters.
+    Your opponent cannot attack Spellcaster Type monsters other than this card.
   de:
   es:
   fr:
@@ -67,7 +67,4 @@ sets:
     set_name: Secret Record Pack 2 Vol.1
     rarities:
     - Super Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715715
