--- a/data/rush/19091.yaml
+++ b/data/rush/19091.yaml
@@ -1,6 +1,6 @@
 konami_id: 19091
 name:
-  en: Hallowed Light Sorcerer
+  en: Light Sorcerer of Sanctity
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 1200
 def: 0
 images:
 - index: 1
-  image: HallowedLightSorcerer-RDSJMP-JP-NPR.png
+  image: LightSorcererofSanctity-RDSJMP-JP-NPR.png
 sets:
   ja:
   - set_number: RD/SJMP-JP028
@@ -60,9 +60,4 @@ sets:
     set_name: Oblivion of the Flash
     rarities:
     - Super Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 932073
