--- a/data/rush/19595.yaml
+++ b/data/rush/19595.yaml
@@ -1,6 +1,6 @@
 konami_id: 19595
 name:
-  en: Swordawn Magician
+  en: Dark Sword Magician
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 summoning_condition:
   en: |-
-    If your opponent has more face-up Level 7 or higher monsters on their field than the number of monsters on your field, you can Special Summon this card from your hand face-up to your field.
+    If the number of face-up Level 7 or higher monsters on your opponent's field exceeds the number of monsters on your field, you can Special Summon this card from your hand face-up to your field.
   de:
   es:
   fr:
@@ -42,7 +42,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you have 6 or more Spell Cards in your Graveyard, this card cannot be destroyed by your opponent's card effects.
+    If you have 6 or more Spell Cards in your Graveyard, this card cannot be destroyed by your opponent's effects.
   de:
   es:
   fr:
@@ -63,7 +63,7 @@ series:
 - Dark Magician
 images:
 - index: 1
-  image: SwordawnMagician-RDMRP2-JP-UR.png
+  image: DarkSwordMagician-RDMRP2-JP-UR.png
 sets:
   ja:
   - set_number: RD/MRP2-JP080
@@ -71,9 +71,4 @@ sets:
     rarities:
     - Ultra Rare
     - Over Rush Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1005415
