--- a/data/rush/17673.yaml
+++ b/data/rush/17673.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Spellcaster Type monster from your hand face-up to your field. It cannot be destroyed by your opponent's Trap Card effects this turn.
+    Special Summon 1 Spellcaster Type monster from your hand face-up to your field. This turn, the monster Special Summoned by this effect cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
@@ -56,7 +56,4 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715694
