--- a/rush.yaml
+++ b/rush.yaml
@@ -32416,7 +32416,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's Level 8 or lower monster declares an attack while you have 1 face-up monster on your field.
+    When an opponent's Level 8 or lower monster declares an attack while you have 1 monster on your field.
   de:
   es:
   fr:
@@ -40016,7 +40016,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 2 or more face-up Warrior Type and/or Beast-Warrior Type monsters on your field.
+    You have 2 or more face-up Beast Type and/or Beast-Warrior Type monsters on your field.
   de:
   es:
   fr:
@@ -68510,7 +68510,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Spellcaster Type monster from your hand face-up to your field. It cannot be destroyed by your opponent's Trap Card effects this turn.
+    Special Summon 1 Spellcaster Type monster from your hand face-up to your field. This turn, the monster Special Summoned by this effect cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
@@ -68538,9 +68538,6 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715694
 ---
 konami_id: 17674
@@ -80591,7 +80588,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    Your opponent cannot attack other face-up Spellcaster Type monsters.
+    Your opponent cannot attack Spellcaster Type monsters other than this card.
   de:
   es:
   fr:
@@ -80628,9 +80625,6 @@ sets:
     set_name: Secret Record Pack 2 Vol.1
     rarities:
     - Super Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715715
 ---
 konami_id: 17980
@@ -107428,7 +107422,7 @@ yugipedia_page_id: 809372
 ---
 konami_id: 19091
 name:
-  en: Hallowed Light Sorcerer
+  en: Light Sorcerer of Sanctity
   de:
   es:
   fr:
@@ -107476,7 +107470,7 @@ atk: 1200
 def: 0
 images:
 - index: 1
-  image: HallowedLightSorcerer-RDSJMP-JP-NPR.png
+  image: LightSorcererofSanctity-RDSJMP-JP-NPR.png
 sets:
   ja:
   - set_number: RD/SJMP-JP028
@@ -107488,11 +107482,6 @@ sets:
     set_name: Oblivion of the Flash
     rarities:
     - Super Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 932073
 ---
 konami_id: 19096
@@ -120833,7 +120822,7 @@ yugipedia_page_id: 1018698
 ---
 konami_id: 19595
 name:
-  en: Swordawn Magician
+  en: Dark Sword Magician
   de:
   es:
   fr:
@@ -120847,7 +120836,7 @@ name:
   zh-CN:
 summoning_condition:
   en: |-
-    If your opponent has more face-up Level 7 or higher monsters on their field than the number of monsters on your field, you can Special Summon this card from your hand face-up to your field.
+    If the number of face-up Level 7 or higher monsters on your opponent's field exceeds the number of monsters on your field, you can Special Summon this card from your hand face-up to your field.
   de:
   es:
   fr:
@@ -120875,7 +120864,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you have 6 or more Spell Cards in your Graveyard, this card cannot be destroyed by your opponent's card effects.
+    If you have 6 or more Spell Cards in your Graveyard, this card cannot be destroyed by your opponent's effects.
   de:
   es:
   fr:
@@ -120896,7 +120885,7 @@ series:
 - Dark Magician
 images:
 - index: 1
-  image: SwordawnMagician-RDMRP2-JP-UR.png
+  image: DarkSwordMagician-RDMRP2-JP-UR.png
 sets:
   ja:
   - set_number: RD/MRP2-JP080
@@ -120904,11 +120893,6 @@ sets:
     rarities:
     - Ultra Rare
     - Over Rush Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1005415
 ---
 konami_id: 19596
